Background jumps on mobile, fix attempt

--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 
 html {
+    overflow-x: hidden;
+    overflow-y: scroll;
 	scroll-behavior: smooth;
 }
 
 body {
+    
     background-image: url("resources/background2.jpg");
     background-position: center top;
-    background-size: 110%;
+    background-size: cover;
     background-attachment: fixed;
 }
 
